Fixed layout issue for cart.

--- a/app/assets/stylesheets/site/check_out.css
+++ b/app/assets/stylesheets/site/check_out.css
@@ -81,7 +81,7 @@ root {
     height: 40px;
     background: lightgray;
     position: relative;
-    Width: 1010px;
+    Width: 980px;
     padding-top: 10px;
     margin-top: 20px;
 
@@ -126,7 +126,7 @@ root {
 }
 .cart-summary-section {
     display: inline-block;
-    width: 1010px;
+    width: 980px;
 }
 
 .cart-summary-price {
